flux/clusters/apps/base/n8n/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n-ingress
  namespace: n8n
  annotations:
    tailscale.com/hostname: n8n
spec:
  ingressClassName: tailscale
  rules:
    - host: n8n
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: n8n
                port:
                  number: 5678
  tls:
    - secretName: "n8n-ingress"
      hosts:
        - n8n
